<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.example.leozhekov.warframedarksectorcreditfarmapp.ActualActivity">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content" android:id="@+id/selectedSectorView" android:textSize="18sp" tools:text=" "/>
  <CheckBox
      android:text="@string/booster_active"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/boosted"/>
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content" android:id="@+id/missionReward" android:textSize="18sp" tools:text=" "/>

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:layout_marginTop="10dp">

    <Button
        android:text="@string/mission_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/missionCount"
        android:layout_weight="1"/>

    <TextView
        android:text="@string/_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/missionCountText"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:textSize="24sp"
        android:layout_marginTop="5dp"/>
  </LinearLayout>

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp">

    <Button
        android:text="@string/_15_endo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/m15Endo" android:layout_weight="1"/>
    <Button
        android:text="@string/_50_endo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/m50Endo" android:layout_weight="1"/>
    <Button
        android:text="@string/_80_endo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/m80Endo" android:layout_weight="1"/>
    <Button
        android:text="@string/_400_endo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/m400Endo"
        android:layout_weight="1"/>
  </LinearLayout>

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp">

    <Button
        android:text="@string/_500_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/m500Credit" android:layout_weight="1"/>
    <Button
        android:text="@string/_1000_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/m1kCredit" android:layout_weight="1"/>
    <Button
        android:text="@string/_1500_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/m1k5Credit" android:layout_weight="1"/>
    <Button
        android:text="@string/_2000_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/m2kCredit"
        android:layout_weight="1"/>

    <Button
        android:text="@string/_2500_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/m2k5Credit"
        android:layout_weight="1"/>

    <Button
        android:text="@string/_3000_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/m3kCredit"
        android:layout_weight="1"/>
  </LinearLayout>

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/missionCreditText"
        android:layout_weight="1"
        android:hint="@string/mission_credits"/>

    <Button
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/missionCredit"
        android:layout_weight="1"/>
  </LinearLayout>
  <View
      android:layout_width="fill_parent"
      android:layout_height="2dip"
      android:background="#000000"/>

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="10dp">

    <TextView
        android:text="@string/total_credits"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_weight="1"
        android:textSize="24sp"/>

    <TextView
        android:text="@string/_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/totalCredits"
        android:layout_weight="1"
        android:textSize="24sp"/>

  </LinearLayout>

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        android:text="@string/total_endo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_weight="1"
        android:textSize="24sp"/>

    <TextView
        android:text="@string/_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/totalEndo"
        android:layout_weight="1"
        android:textSize="24sp"
        android:layout_marginBottom="10dp"/>
  </LinearLayout>
  <View
      android:layout_width="fill_parent"
      android:layout_height="2dip"
      android:background="#000000"/>

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp">

    <Button
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/back" android:layout_weight="1"/>
    <Button
        android:text="@string/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reset"
        android:layout_weight="1"/>
  </LinearLayout>

</LinearLayout>

</RelativeLayout>
